Added sidebar and solidified flex layout

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -7,8 +7,12 @@
             <div id="top-bar">
                 <span class="tab">Untitled.txt</span>
             </div>
-            <div id="buffer" class="editor">
-                <div class="lines">
+            <div id="content">
+                <div id="sidebar">
+                </div>
+                <div id="buffer" class="editor">
+                    <div class="lines">
+                    </div>
                 </div>
             </div>
             <div id="bottom-bar">
