New keymap system

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -4,12 +4,12 @@
     </head>
     <body>
         <div id="box">
-            <!--<div id="palette">
+            <div id="palette">
                 <input id="palette-input">
-                <hr class="palette-divider">
+                <!--<hr class="palette-divider">-->
                 <div class="palette-item">Item 1</div>
                 <div class="palette-item">Item 2</div>
-            </div>-->
+            </div>
             <div id="top-bar">
                 <span class="tab">Untitled.txt</span>
             </div>
